WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245214
[ATSPI] ASSERTION FAILED: m_table in accessibility/aria-invalid.html
https://bugs.webkit.org/show_bug.cgi?id=245214
Summary
[ATSPI] ASSERTION FAILED: m_table in accessibility/aria-invalid.html
Vitaly Dyackhov
Reported
2022-09-15 04:07:27 PDT
This happens running test accessibility/aria-invalid.html with assertions enabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2022-09-15 04:26:42 PDT
Pull request:
https://github.com/WebKit/webkit/pull/4377
Philippe Normand
Comment 2
2022-09-18 09:33:10 PDT
***
Bug 245335
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2022-09-21 05:53:15 PDT
Committed
254722@main
(f170deb76702): <
https://commits.webkit.org/254722@main
> Reviewed commits have been landed. Closing PR #4377 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug