Prevent calling an AT-SPI observer from invalidating map iterators https://bugs.webkit.org/show_bug.cgi?id=245214

Reviewed by Carlos Garcia Campos.

* Source/WebCore/accessibility/atspi/AccessibilityAtspi.cpp:
(WebCore::AccessibilityAtspi::notify const):
(WebCore::AccessibilityAtspi::notifyStateChanged const):
(WebCore::AccessibilityAtspi::notifySelectionChanged const):
(WebCore::AccessibilityAtspi::notifyMenuSelectionChanged const):
(WebCore::AccessibilityAtspi::notifyTextChanged const):
(WebCore::AccessibilityAtspi::notifyTextCaretMoved const):
(WebCore::AccessibilityAtspi::notifyValueChanged const):
(WebCore::AccessibilityAtspi::notifyLoadEvent const):
* Source/WebCore/accessibility/atspi/AccessibilityAtspi.h:

Canonical link: https://commits.webkit.org/254722@main