Source/WebCore/accessibility/atspi/AccessibilityAtspi.cpp
@@ -835,11 +835,20 @@ void AccessibilityAtspi::removeNotificationObserver(void* context)
     m_notificationObservers.remove(context);
 }
 
-void AccessibilityAtspi::notifyStateChanged(AccessibilityObjectAtspi& atspiObject, const char* name, bool value) const
+void AccessibilityAtspi::notify(AccessibilityObjectAtspi& atspiObject, const char* name, NotificationObserverParameter parameter) const
 {
     if (m_notificationObservers.isEmpty())
         return;
 
+    for (auto* context : copyToVector(m_notificationObservers.keys())) {
+        auto it = m_notificationObservers.find(context);
+        ASSERT(it != m_notificationObservers.end());
+        it->value(atspiObject, name, parameter);
+    }
+}
+
+void AccessibilityAtspi::notifyStateChanged(AccessibilityObjectAtspi& atspiObject, const char* name, bool value) const
+{
     auto notificationName = [&](const char* name) -> const char* {
         if (!g_strcmp0(name, "checked"))
             return "CheckedStateChanged";
@@ -870,39 +879,33 @@ void AccessibilityAtspi::notifyStateChanged(AccessibilityObjectAtspi& atspiObjec
     const char* notification = notificationName(name);
     if (!notification)
         return;
-
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, notification, value);
+    
+    notify(atspiObject, notification, value);
 }
 
 void AccessibilityAtspi::notifySelectionChanged(AccessibilityObjectAtspi& atspiObject) const
-{
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXSelectedChildrenChanged", nullptr);
+{   
+    notify(atspiObject, "AXSelectedChildrenChanged", nullptr);
 }
 
 void AccessibilityAtspi::notifyMenuSelectionChanged(AccessibilityObjectAtspi& atspiObject) const
 {
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXMenuItemSelected", nullptr);
+    notify(atspiObject, "AXMenuItemSelected", nullptr);
 }
 
 void AccessibilityAtspi::notifyTextChanged(AccessibilityObjectAtspi& atspiObject) const
 {
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXTextChanged", nullptr);
+    notify(atspiObject, "AXTextChanged", nullptr);
 }
 
 void AccessibilityAtspi::notifyTextCaretMoved(AccessibilityObjectAtspi& atspiObject, unsigned caretOffset) const
 {
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXTextCaretMoved", caretOffset);
+    notify(atspiObject, "AXTextCaretMoved", caretOffset);
 }
 
 void AccessibilityAtspi::notifyValueChanged(AccessibilityObjectAtspi& atspiObject) const
 {
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXValueChanged", nullptr);
+    notify(atspiObject, "AXValueChanged", nullptr);
 }
 
 void AccessibilityAtspi::notifyLoadEvent(AccessibilityObjectAtspi& atspiObject, const CString& event) const
@@ -910,8 +913,7 @@ void AccessibilityAtspi::notifyLoadEvent(AccessibilityObjectAtspi& atspiObject, 
     if (event != "LoadComplete")
         return;
 
-    for (const auto& observer : m_notificationObservers.values())
-        observer(atspiObject, "AXLoadComplete", nullptr);
+    notify(atspiObject, "AXLoadComplete", nullptr);
 }
 
 #endif
